--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,7 @@
                 padding: 15% 10%;
             }
 
-            main {
+            .main {
                 position: relative;
             }
         </style>
