Add additional faces

--- a/html/index.html
+++ b/html/index.html
@@ -70,6 +70,22 @@
                 "baalorlord_woot": {
                     "label": "w00t?!",
                     "image": "./images/baalorlord/baalorlord_woot.png"
+                },
+                "baalorlord_hand": {
+                    "label": "Oooof!",
+                    "image": "./images/baalorlord/baalorlord_hand.png"
+                },
+                "baalorlord_hand_cover": {
+                    "label": "Gasp!",
+                    "image": "./images/baalorlord/baalorlord_hand_cover.png"
+                },
+                "baalorlord_double_hands": {
+                    "label": "WOW!",
+                    "image": "./images/baalorlord/baalorlord_double_hands.png"
+                },
+                "baalorlord_yeah": {
+                    "label": "Uh, yeah..",
+                    "image": "./images/baalorlord/baalorlord_yeah.png"
                 }
             }
         </script>
